# diploma

./: .gitignore  check.py  check.sage  init_files.py  init_files.sage  pyproject.toml
archive/: black_box.sage
exam/linear_stat_analog/: boolean_tasks.tex  exam_code.py  tasks.tex
referat/: main.tex
referat/chapter 1/: chapter_1.tex
referat/title/: title.tex
referat/title_2/: title_2.tex
src/: decorators.py  logger_config.py  main.py  main.sage  some_checks.py  some_checks.sage
src/theorems/: statement_theorems.py  statement_theorems.sage  verify_theorems.py  verify_theorems.sage
tests/: test_main.py  test_statement_theorems.py  test_verify_theorems.py
user_interface/: crypto_engine.py  main_gui.py  main_window.py  settings_window.py
